--- a/launchd/net.consolaktif.discord.spoofdpi.plist
+++ b/launchd/net.consolaktif.discord.spoofdpi.plist
@@ -4,24 +4,25 @@
 <dict>
     <key>Label</key>
     <string>net.consolaktif.discord.spoofdpi</string>
-
     <key>ProgramArguments</key>
     <array>
         <string>/bin/zsh</string>
         <string>-c</string>
         <string>exec "$HOME/Library/Application Support/Consolaktif-Discord/discord-spoofdpi.sh"</string>
     </array>
-
     <key>RunAtLoad</key>
     <true/>
-
     <key>KeepAlive</key>
     <true/>
-
     <key>EnvironmentVariables</key>
     <dict>
         <key>PATH</key>
         <string>/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
+    </dict>
+    <key>HardResourceLimits</key>
+    <dict>
+        <key>CPU</key><integer>60</integer>
+        <key>Memory</key><integer>268435456</integer>
     </dict>
 </dict>
 </plist>
