--- a/launchd/net.consolaktif.discord.spoofdpi.plist.template
+++ b/launchd/net.consolaktif.discord.spoofdpi.plist.template
@@ -6,14 +6,19 @@
     <string>net.consolaktif.discord.spoofdpi</string>
     <key>ProgramArguments</key>
     <array>
-        <string>/bin/zsh</string>
-        <string>-c</string>
-        <string>exec "$HOME/Library/Application Support/Consolaktif-Discord/discord-spoofdpi.sh"</string>
+        <string>__USER_HOME__/Library/Application Support/Consolaktif-Discord/discord-spoofdpi.sh</string>
     </array>
     <key>RunAtLoad</key>
     <true/>
     <key>KeepAlive</key>
-    <true/>
+    <dict>
+        <key>SuccessfulExit</key>
+        <false/>
+    </dict>
+    <key>StandardOutPath</key>
+    <string>__USER_HOME__/Library/Logs/net.consolaktif.discord.spoofdpi.out.log</string>
+    <key>StandardErrorPath</key>
+    <string>__USER_HOME__/Library/Logs/net.consolaktif.discord.spoofdpi.err.log</string>
     <key>EnvironmentVariables</key>
     <dict>
         <key>PATH</key>
