--- a/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.spoofdpi.plist.template
+++ b/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.spoofdpi.plist.template
@@ -14,6 +14,8 @@
     <dict>
         <key>SuccessfulExit</key>
         <false/>
+        <key>Crashed</key>
+        <true/>
     </dict>
     <key>StandardOutPath</key>
     <string>__USER_HOME__/Library/Logs/ConsolAktifSplitWireLog/net.consolaktif.discord.spoofdpi.out.log</string>
@@ -24,10 +26,7 @@
         <key>PATH</key>
         <string>/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
     </dict>
-    <key>HardResourceLimits</key>
-    <dict>
-        <key>CPU</key><integer>60</integer>
-        <key>Memory</key><integer>268435456</integer>
-    </dict>
+    <key>ProcessType</key>
+    <string>Interactive</string>
 </dict>
 </plist>
