--- a/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.launcher.plist.template
+++ b/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.launcher.plist.template
@@ -4,44 +4,36 @@
 <dict>
     <key>Label</key>
     <string>net.consolaktif.discord.launcher</string>
+    
+    <!-- KRİTİK BÖLÜM: Ortam Değişkenleri Native Olarak Tanımlanıyor -->
+    <!-- Bu sayede Updater, Helper, GPU Process hepsi proxy'yi görür -->
+    <key>EnvironmentVariables</key>
+    <dict>
+        <key>http_proxy</key>
+        <string>http://127.0.0.1:8080</string>
+        <key>https_proxy</key>
+        <string>http://127.0.0.1:8080</string>
+        <key>all_proxy</key>
+        <string>http://127.0.0.1:8080</string>
+        <key>PATH</key>
+        <string>/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
+    </dict>
+
     <key>ProgramArguments</key>
     <array>
         <string>/bin/zsh</string>
         <string>-c</string>
         <string>
-# Ortam değişkenlerini sabitle
-export PATH="/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$PATH"
-
-PORT_FILE="$HOME/Library/Application Support/Consolaktif-Discord/.proxy_port"
-if [ -f "$PORT_FILE" ]; then
-  PORT=$(cat "$PORT_FILE" 2>/dev/null | tr -d '\n' | tr -cd '0-9')
-fi
-PORT=${PORT:-${CD_PROXY_PORT:-8080}}
-
-echo "Proxy bekleniyor (port: $PORT)..."
+# Port 8080'in hazır olmasını bekle
+echo "Proxy (8080) bekleniyor..."
 DEADLINE=$((SECONDS+45))
-
-# Port kontrolü
-while true; do
-  if nc -z 127.0.0.1 $PORT 2>/dev/null; then
-    echo "Proxy hazır. Discord başlatılıyor..."
-    break
-  fi
-  if [ $SECONDS -ge $DEADLINE ]; then
-    echo "UYARI: Proxy yanıt vermedi, yine de Discord başlatılıyor..."
-    break
-  fi
+while ! nc -z 127.0.0.1 8080 2>/dev/null; do
+  if [ $SECONDS -ge $DEADLINE ]; then break; fi
   sleep 0.5
 done
 
-# Discord'a proxy'yi zorla (Env Vars)
-export http_proxy="http://127.0.0.1:${PORT}"
-export https_proxy="http://127.0.0.1:${PORT}"
-export HTTP_PROXY="http://127.0.0.1:${PORT}"
-export HTTPS_PROXY="http://127.0.0.1:${PORT}"
-
-# Discord'u başlat
-exec /Applications/Discord.app/Contents/MacOS/Discord --proxy-server="http://127.0.0.1:${PORT}" --ignore-certificate-errors
+# Discord'u en doğal haliyle başlat (Ekstra parametreye gerek kalmadı, yukarıdaki EnvVar yeterli)
+exec /Applications/Discord.app/Contents/MacOS/Discord
         </string>
     </array>
     <key>RunAtLoad</key>
