--- a/Splitwire-for-Macos-intel/launchd/net.consolaktif.discord.spoofdpi.plist.template
+++ b/Splitwire-for-Macos-intel/launchd/net.consolaktif.discord.spoofdpi.plist.template
@@ -14,6 +14,8 @@
     <dict>
         <key>SuccessfulExit</key>
         <false/>
+        <key>Crashed</key>
+        <true/>
     </dict>
     <key>StandardOutPath</key>
     <string>__USER_HOME__/Library/Logs/ConsolAktifSplitWireLog/net.consolaktif.discord.spoofdpi.out.log</string>
@@ -22,16 +24,9 @@
     <key>EnvironmentVariables</key>
     <dict>
         <key>PATH</key>
-        <string>/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
-        <key>HOMEBREW_PREFIX</key>
-        <string>/opt/homebrew</string>
-        <key>CD_PROXY_PORT</key>
-        <string>8080</string>
+        <string>/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
     </dict>
-    <key>HardResourceLimits</key>
-    <dict>
-        <key>CPU</key><integer>60</integer>
-        <key>Memory</key><integer>268435456</integer>
-    </dict>
+    <key>ProcessType</key>
+    <string>Interactive</string>
 </dict>
 </plist>
