--- a/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.launcher.plist.template
+++ b/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.launcher.plist.template
@@ -5,7 +5,7 @@
     <key>Label</key>
     <string>net.consolaktif.discord.launcher</string>
     
-    <!-- Proxy Ayarları (Discord Updater'ın görmesi için ZORUNLU) -->
+    <!-- ORTAM DEĞİŞKENLERİ (Update Modülü İçin Şart) -->
     <key>EnvironmentVariables</key>
     <dict>
         <key>http_proxy</key>
@@ -14,7 +14,7 @@
         <string>http://127.0.0.1:8080</string>
         <key>all_proxy</key>
         <string>http://127.0.0.1:8080</string>
-        <!-- Hem Intel hem Apple Silicon yolları eklendi -->
+        <!-- HEM INTEL (/usr/local) HEM M-SERİSİ (/opt/homebrew) YOLLARI EKLİ -->
         <key>PATH</key>
         <string>/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
     </dict>
@@ -25,7 +25,7 @@
         <string>-c</string>
         <string>
 # ----------------------------------------------------------------------
-# 1. TEMİZLİK (UPDATE HATASINI ÖNLEME)
+# 1. TEMİZLİK (UPDATE HATASINI VE BOZUK DOSYALARI ÖNLEME)
 # ----------------------------------------------------------------------
 # Bilgisayar açıldığında, önceki hatalı/yarım kalan güncellemeleri sil.
 # Bu komutlar hesabına veya ayarlarına zarar vermez, sadece önbelleği temizler.
@@ -38,7 +38,7 @@ rm -rf "$HOME/Library/Caches/com.hnc.Discord/ShipIt_stderr.log"
 # 2. BEKLEME MODU (RACE CONDITION ÖNLEME)
 # ----------------------------------------------------------------------
 # Proxy (spoofdpi) servisi 8080 portunu açana kadar bekle.
-# Bilgisayar açılışında bu 5-10 saniye sürebilir.
+# Bilgisayar açılışında bu işlem internet gelene kadar 5-10 saniye sürebilir.
 echo "Launcher: Proxy bekleniyor..."
 DEADLINE=$((SECONDS+45))
 
@@ -51,13 +51,14 @@ while ! nc -z 127.0.0.1 8080 2>/dev/null; do
   sleep 1
 done
 
-# İnternet bağlantısının oturması için ekstra 2 saniye nefes payı
+# İnternet bağlantısının ve DNS'in tam oturması için ekstra 2 saniye nefes payı
 sleep 2
 
 # ----------------------------------------------------------------------
 # 3. BAŞLATMA
 # ----------------------------------------------------------------------
 # Ortam değişkenleri (EnvironmentVariables) sayesinde update modülü de proxy kullanır.
+# --ignore-certificate-errors: Proxy kullandığımız için SSL/Update hatasını önler.
 exec /Applications/Discord.app/Contents/MacOS/Discord --ignore-certificate-errors
         </string>
     </array>
