--- a/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.launcher.plist.template
+++ b/Splitwire-for-Macos-mseries/launchd/net.consolaktif.discord.launcher.plist.template
@@ -4,43 +4,44 @@
 <dict>
     <key>Label</key>
     <string>net.consolaktif.discord.launcher</string>
+    
+    <!-- EN KRİTİK KISIM: Updater'ın Proxy görmesi için ZORUNLU -->
+    <key>EnvironmentVariables</key>
+    <dict>
+        <key>http_proxy</key>
+        <string>http://127.0.0.1:8080</string>
+        <key>https_proxy</key>
+        <string>http://127.0.0.1:8080</string>
+        <key>all_proxy</key>
+        <string>http://127.0.0.1:8080</string>
+        <!-- Hem Intel (/usr/local) Hem M-Serisi (/opt/homebrew) Yolları -->
+        <key>PATH</key>
+        <string>/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin</string>
+    </dict>
+
     <key>ProgramArguments</key>
     <array>
         <string>/bin/zsh</string>
         <string>-c</string>
         <string>
-# ---------------------------------------------------------
-# 1. TEMİZLİK (Stuck on Update Çözümü)
-# ---------------------------------------------------------
-# Discord'un takılmasına neden olan "bekleyen güncelleme" klasörünü sil.
-# Bu klasör silinmezse Discord bozuk güncellemeyi yüklemeye çalışıp donar.
+# 1. Update Hatası Temizliği (Her açılışta yapılır)
 rm -rf "$HOME/Library/Application Support/discord/pending"
 rm -rf "$HOME/Library/Application Support/discord/modules/pending"
 rm -rf "$HOME/Library/Caches/com.hnc.Discord.ShipIt"
 
-# ---------------------------------------------------------
-# 2. PROXY KONTROLÜ (Açılana kadar bekle)
-# ---------------------------------------------------------
-# Port 8080 açılmadan Discord başlarsa "Update Failed" verir.
-# Bu döngü proxy hazır olana kadar bekler.
-echo "Proxy bekleniyor..."
+# 2. Proxy (SpoofDPI) Bekleme (Maksimum 30 saniye)
+# Proxy açılmadan Discord açılırsa update hatası verir.
+echo "Launcher: Proxy bekleniyor..."
+count=0
 while ! nc -z 127.0.0.1 8080 2>/dev/null; do
   sleep 1
+  count=$((count+1))
+  if [ $count -ge 30 ]; then break; fi
 done
 
-# İnternetin tam oturması için 1 saniye nefes payı
-sleep 1
-
-# ---------------------------------------------------------
-# 3. BAŞLATMA (Eski Usül + Update Garantisi)
-# ---------------------------------------------------------
-# Updater'ın proxy'yi görmesi için değişkenleri burada tanımlıyoruz (En garantisi).
-export http_proxy="http://127.0.0.1:8080"
-export https_proxy="http://127.0.0.1:8080"
-export all_proxy="http://127.0.0.1:8080"
-
-# Discord'u başlat
-exec /Applications/Discord.app/Contents/MacOS/Discord --proxy-server="http://127.0.0.1:8080" --ignore-certificate-errors
+# 3. Discord'u Başlat (Updater, yukarıdaki EnvVar'ları okur)
+# --ignore-certificate-errors: Proxy kullandığımız için SSL hatalarını önler.
+exec /Applications/Discord.app/Contents/MacOS/Discord --ignore-certificate-errors
         </string>
     </array>
     <key>RunAtLoad</key>
